# MirageEngine

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  MirageEngine.sln  build.ps1
ARM/Debug/: libMirageAndroid.so.recipe
Debug/: EngineTest.ilk  MirageEngine.lib  MirageWin32.ilk
Doc/: MirageEngine-AboutArchitecture.md  MirageEngine-AboutCPP.md  MirageEngine-AboutPlan.md  MirageEngine-AboutRender.md  MirageEngine-Android.md  MirageEngine-HTML5.md  MirageEngine-IOS.md  MirageEngine-Linux.md  MirageEngine-Mac.md  MirageEngine-Shader.md  MirageEngine-Windows.md
EngineTest/: CMakeLists.txt  EngineTest.vcxproj  main.cpp
EngineTest/Debug/: vc141.idb
EngineTest/Debug/EngineTest.tlog/: CL.11184.delete.1.tlog  CL.7244.delete.1.tlog  CL.8460.delete.1.tlog  CL.9464.delete.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EngineTest/Debug/MirageWin32.tlog/: CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
EngineTest/x64/Debug/: vc141.idb
EngineTest/x64/Debug/EngineTest.tlog/: CL.8124.delete.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EngineTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MirageAndroid/MirageAndroid.NativeActivity/: MirageAndroid.NativeActivity.vcxproj  main.cpp
MirageAndroid/MirageAndroid.NativeActivity/ARM/Debug/: pch.h.gch
MirageAndroid/MirageAndroid.NativeActivity/x86/Debug/: pch.h.gch
MirageAndroid/MirageAndroid.Packaging/: AndroidManifest.xml  MirageAndroid.Packaging.androidproj
MirageAndroid/MirageAndroid.Packaging/ARM/Debug/: FileStringReplace.incremental  MirageAndroid.Packaging.androidproj.FileListAbsolute.txt  MirageAndroid.apk  MirageAndroid.apk.recipe  MirageAndroid.apk.recipe.merged
MirageAndroid/MirageAndroid.Packaging/x86/Debug/: FileStringReplace.incremental  MirageAndroid.Packaging.androidproj.FileListAbsolute.txt  MirageAndroid.apk  MirageAndroid.apk.recipe  MirageAndroid.apk.recipe.merged
MirageEngine/: CMakeLists.txt  Config.cpp  Config.h  MirageEngine.vcxproj  MirageEngine.vcxproj.filters  ReadMe.txt
MirageEngine/Core/: CMakeLists1.txt
MirageEngine/Core/Allocator/: AllocatorBase.h  CMakeLists.txt  MemoryPool.h  PoolAllocator.h  StackAllocator.h
MirageEngine/Core/Alloctor/: LinearAlloctor.h  MemoryPool.h  StackAlloctor.h
MirageEngine/Core/HAL/: CMakeLists.txt  IOBase.h  Platform.h
MirageEngine/Core/Math/: CMakeLists.txt  TColor.cpp  TMatrix.cpp  TMatrix.h  TQuaternion.cpp  TVector2.cpp  TVector2.h  TVector3.cpp  TVector3.h  TVector4.cpp  TVector4.h
MirageEngine/Debug/: MirageEngine.idb
MirageEngine/Debug/MirageEngine.tlog/: CL.10188.delete.1.tlog  CL.10292.delete.1.tlog  CL.10816.delete.1.tlog  CL.11196.delete.1.tlog  CL.11200.delete.1.tlog  CL.7268.delete.1.tlog  CL.8344.delete.1.tlog  CL.8532.delete.1.tlog  CL.9260.delete.1.tlog  CL.9560.delete.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MirageEngine.lastbuildstate
MirageEngine/x64/Debug/MirageEngine.tlog/: CL.10244.delete.1.tlog  CL.10244.write.1.tlog  CL.10296.delete.1.tlog  CL.11872.delete.1.tlog  CL.4424.delete.1.tlog  CL.6192.delete.1.tlog  CL.7012.delete.1.tlog  CL.7048.delete.1.tlog  CL.7112.delete.1.tlog  CL.7192.delete.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  MirageEngine.lastbuildstate  lib.command.1.tlog
Resource/Shader/: basic.HLSL  ps.HLSL  ps.glsl  psbuff.HLSL.assamble  vs.HLSL  vs.glsl  vsbuff.HLSL.assamble
Src/: CMakeLists.txt
Src/EngineTest/: CMakeLists.txt  EngineTest.h  EngineTestClass.h  main.cpp
Src/MirageEngine/: CMakeLists.txt
Src/MirageEngine/Core/: Core.h
Src/MirageEngine/Core/Allocator/: Allocator.h  DoubleEndedStackAllocator.cpp  DoubleEndedStackAllocator.h  LinearAllocator.cpp  LinearAllocator.h  MemoryPool.cpp  MemoryPool.h  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
Src/MirageEngine/Core/BasePlatform/: BaseApplication.cpp  BaseApplication.h  BasePlatform.h  BaseWindow.cpp  BaseWindow.h
Src/MirageEngine/Core/DesignPattern/: Observer.cpp  Observer.h  Singleton.h
Src/MirageEngine/Core/Framework/: ISystem.h  SystemManager.cpp  SystemManager.h
Src/MirageEngine/Core/Framework/Parallel/: Object.h  ParallelFramework.h  Scheduler.h  ServiceManager.h  StateManager.h  Task.h  TaskCreator.cpp  TaskCreator.h  TaskManager.cpp  TaskManager.h
Src/MirageEngine/Core/HAL/: IOBase.cpp  IOBase.h  MMalloc.cpp  MMalloc.h  Platform.h
Src/MirageEngine/Core/Linux/: LinuxApplication.cpp  LinuxApplication.h  LinuxWindow.cpp  LinuxWindow.h
Src/MirageEngine/Core/MObject/: MObject.h  MObjectSystem.h
Src/MirageEngine/Core/Math/: Camera.cpp  Camera.h  Color.h  MEMath.cpp  MEMath.h  Matrix.h  Quaternion.h  Rang.h  Rotater.h  Transform.cpp  Transform.h  Vector2.h  Vector3.h  Vector4.h  VersionNumber.cpp  VersionNumber.h
Src/MirageEngine/Core/Misc/: Timer.cpp  Timer.h
Src/MirageEngine/Core/Windows/: WindowsApplication.h  WindowsWindow.h
Src/MirageEngine/Entity/: Entity.h  EntityComponent.h  EntitySystem.h
Src/MirageEngine/Entity/Component/: MeshComponent.h  TransformComponent.h
Src/MirageEngine/Entity/Entity/: ActorEntity.h
Src/MirageEngine/Render/: RenderSystem.h
Src/MirageEngine/Render/BaseRender/: BaseRender.cpp  BaseRender.h  Shader.h
Src/MirageEngine/Render/Material/: Material.h
Src/MirageEngine/Render/Render/: Render.cpp  Render.h  Shader.h
Src/MirageEngine/Render/Render/RenderResource/: IndexBuffer.h  RenderResource.h  VertexBuffer.h
Src/MirageEngine/Render/RenderDX11/: RenderDX11.cpp  RenderDX11.h  ShaderDX11.h
Src/MirageEngine/Render/RenderOGL4/: RenderOGL4.cpp  RenderOGL4.h  ShaderOGL4.h
Src/MirageEngine/Resource/: ResourceSystem.h
Src/MirageEngine/Resource/Element/: IResElement.h  ResMaterial.h  ResMesh.h  ResShader.h  ResTexture.h
Src/MirageEngine/Resource/Format/: TextureFormat.h  VertexFormat.h
x64/Debug/: EngineTest.ilk  MirageEngine.lib
x86/Debug/: libMirageAndroid.so.recipe
(+19 files in other folders)
